[package]
name = "actix-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["rustls"]}
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
chrono = "0.4.19"
dotenv = "0.15.0"
serde = "1"
serde_json = "1"
anyhow = "1.0.44"
log = "0.4.14"
